# BPLA_project

hse-uav-vbrac/: CMakeLists.txt  README.md  package.xml
hse-uav-vbrac/include/: formation.h  uav.h  unit_test.h
hse-uav-vbrac/msg/: algMsg.msg  battery.msg  enoga.msg  follower.msg  formationMsg.msg  guiMas.msg
hse-uav-vbrac/scripts/: camera_image.py  test_node.py
hse-uav-vbrac/src/: NewGui.cpp  commands_controller.cpp  follower_node.cpp  follower_node2.cpp  follower_node3.cpp  follower_node4.cpp  follower_node5.cpp  follower_node6.cpp  follower_node7.cpp  follower_node8.cpp  follower_node9.cpp  formation.cpp  leader_node.cpp  participant_node.cpp  skforms.cpp  test_surf.cpp  uav.cpp  unit_test.cpp
rqt_uav_gui_cpp/: CMakeLists (копия).txt  CMakeLists.txt  README.md  package.xml  plugin.xml  res.qrc  setup.py
rqt_uav_gui_cpp/include/rqt_uav_gui_cpp/: formation.h  gui_plugin.h  rlf.h
rqt_uav_gui_cpp/msg/: algMsg.msg  groups.msg
rqt_uav_gui_cpp/rc/: res.qrc
rqt_uav_gui_cpp/src/rqt_uav_gui_cpp/: formation.cpp  gui_plugin.cpp  gui_plugin.ui  gui_plugin1710.ui  gui_plugin2909.ui  gui_plugin_classic.ui  gui_plugin_new.ui  gui_plugin_old.ui  old.ui  rlf.cpp
